--- a/DevFreela.Application/DevFreela.Application.csproj
+++ b/DevFreela.Application/DevFreela.Application.csproj
@@ -11,4 +11,13 @@
     <ProjectReference Include="..\DevFreela.Infrastruture\DevFreela.Infrastruture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\GetAllSkills\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
 </Project>
