Created Command with MediatR in the layer Project

--- a/DevFreela.Application/DevFreela.Application.csproj
+++ b/DevFreela.Application/DevFreela.Application.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Commands\GetAllProject\" />
+    <Folder Include="Commands\GetByIdProject\" />
     <Folder Include="Queries\GetAllSkills\" />
   </ItemGroup>
 
