--- a/DevFreela.API/DevFreela.API.csproj
+++ b/DevFreela.API/DevFreela.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DevFreeka.Core\DevFreela.Core.csproj" />
+    <ProjectReference Include="..\DevFreela.Core\DevFreela.Core.csproj" />
     <ProjectReference Include="..\DevFreela.Application\DevFreela.Application.csproj" />
     <ProjectReference Include="..\DevFreela.Infrastruture\DevFreela.Infrastruture.csproj" />
   </ItemGroup>
