--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -17,5 +17,10 @@
   "ConnectionStrings": {
     "DevFreelaCs": "Server=localhost;Database=DevFreela;User Id=rael;Password=teste@123;MultipleActiveResultSets=true;TrustServerCertificate=false;Encrypt=false;",
     "Local": "Server=localhost;Database=TESTE;User Id=rael;Password=teste@123;MultipleActiveResultSets=true;TrustServerCertificate=false;Encrypt=false;"
+  },
+  "Jwt": {
+    "Key": "Está É Minha Senha Secreta Para Proteger Meus Tokens!",
+    "Issuer": "DevFreela",
+    "Audience":  "ClientFreelancers"
   }
 }
