--- a/DevFreela.API/appsettings.Development.json
+++ b/DevFreela.API/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "openingTime": {
+    "StartAt": "08:00:00",
+    "FinishAt": "18:00:00"
+  },
+  "MaintenanceTime": {
+    "StartAt": "01:00:00",
+    "FinishAt": "04:00:00"
+  },
+  "ConnectionStrings": {
+    "DevFreelaCs": "Server=localhost;Database=DevFreela;User Id=rael;Password=teste@123;MultipleActiveResultSets=true;TrustServerCertificate=false;Encrypt=false;",
+    "Local": "Server=localhost;Database=TESTE;User Id=rael;Password=teste@123;MultipleActiveResultSets=true;TrustServerCertificate=false;Encrypt=false;"
+  },
+  "Jwt": {
+    "Key": "Está É Minha Senha Secreta Para Proteger Meus Tokens!",
+    "Issuer": "DevFreela",
+    "Audience": "ClientFreelancers"
   }
 }
