Added call httpclient in microservice payment

--- a/DevFreela.API/appsettings.Development.json
+++ b/DevFreela.API/appsettings.Development.json
@@ -22,5 +22,8 @@
     "Key": "Está É Minha Senha Secreta Para Proteger Meus Tokens!",
     "Issuer": "DevFreela",
     "Audience": "ClientFreelancers"
+  },
+  "Services": {
+    "Payments": "https://localhost:6001"
   }
 }
